# freer-effects

./: LICENSE  README.md  freer-effects.cabal  stack.yaml
examples/src/: Capitalize.hs  Console.hs  Fresh.hs  Main.hs  Trace.hs
src/Control/Monad/: Freer.hs
src/Control/Monad/Freer/: Coroutine.hs  Cut.hs  Exception.hs  Fresh.hs  Internal.hs  NonDet.hs  Reader.hs  State.hs  StateRW.hs  Trace.hs  Writer.hs
src/Data/: FTCQueue.hs  OpenUnion.hs
tests/: Tests.hs
tests/Tests/: Coroutine.hs  Exception.hs  Fresh.hs  Loop.hs  NonDet.hs  Reader.hs  State.hs
